@@ -1,0 +1,34 @@
+@comment $NetBSD: PLIST,v 1.1 2018/01/26 14:24:29 triaxx Exp $
+${PYSITELIB}/cloudfiles/__init__.py
+${PYSITELIB}/cloudfiles/__init__.pyc
+${PYSITELIB}/cloudfiles/__init__.pyo
+${PYSITELIB}/cloudfiles/authentication.py
+${PYSITELIB}/cloudfiles/authentication.pyc
+${PYSITELIB}/cloudfiles/authentication.pyo
+${PYSITELIB}/cloudfiles/connection.py
+${PYSITELIB}/cloudfiles/connection.pyc
+${PYSITELIB}/cloudfiles/connection.pyo
+${PYSITELIB}/cloudfiles/consts.py
+${PYSITELIB}/cloudfiles/consts.pyc
+${PYSITELIB}/cloudfiles/consts.pyo
+${PYSITELIB}/cloudfiles/container.py
+${PYSITELIB}/cloudfiles/container.pyc
+${PYSITELIB}/cloudfiles/container.pyo
+${PYSITELIB}/cloudfiles/errors.py
+${PYSITELIB}/cloudfiles/errors.pyc
+${PYSITELIB}/cloudfiles/errors.pyo
+${PYSITELIB}/cloudfiles/fjson.py
+${PYSITELIB}/cloudfiles/fjson.pyc
+${PYSITELIB}/cloudfiles/fjson.pyo
+${PYSITELIB}/cloudfiles/storage_object.py
+${PYSITELIB}/cloudfiles/storage_object.pyc
+${PYSITELIB}/cloudfiles/storage_object.pyo
+${PYSITELIB}/cloudfiles/utils.py
+${PYSITELIB}/cloudfiles/utils.pyc
+${PYSITELIB}/cloudfiles/utils.pyo
+${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
+${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
+${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
+${PYSITELIB}/${EGG_INFODIR}/namespace_packages.txt
+${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
+${PYSITELIB}/${EGG_INFODIR}/top_level.txt
